src/styles/list.css
.list {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  width: 100%;
  padding: 24px;
}

.channel {
  display: flex;
  height: 0;
  width: calc(50% - 8px);
  overflow: hidden;
  padding-top: 25%;
  position: relative;
  margin: 0 8px 8px 0;
}

.channel:nth-child(2n) {
  margin-right: 0;
}

.channel__content {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  font-size: 14px;
  background: lightgray;
  color: #000;
}

.channel__image {
  width: 100%;
  height: 70%;
  object-fit: cover;
}

.channel__label {
  font-weight: bold;
  text-align: left;
  padding: 8px 0 8px 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

@media screen and (min-width: 768px) {
  .channel {
    width: calc(20% - 8px);
    padding-top: 14%;
    margin-right: 8px;
  }

  .channel:nth-child(2n) {
    margin-right: 8px;
  }

  .channel:nth-child(5n) {
    margin-right: 0;
  }

  .list {
    padding: 24px 0;
  }

}

